# mid-term

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/01_expressions/: CMakeLists.txt  fun_clock.cpp  fun_clock.h  main.cpp
src/02_decisions_if/: CMakeLists.txt  dna_p_distance.cpp  dna_p_distance.h  main.cpp
src/03_decisions_switch/: CMakeLists.txt  gpa_letter_grade.cpp  gpa_letter_grade.h  main.cpp
src/04_loops_simple_data/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  main.cpp
src/05_loops_strings/: CMakeLists.txt  main.cpp  transcribe_dna_to_rna.cpp  transcribe_dna_to_rna.h
src/06_loops_vectors/: CMakeLists.txt  dna_p_distance_vector.cpp  dna_p_distance_vector.h  main.cpp
src/07_function_value_params/: CMakeLists.txt  main.cpp  value_params.cpp  value_params.h
src/08_function_ref_params/: CMakeLists.txt  main.cpp  ref_params.cpp  ref_params.h
src/09_class_basics/: CMakeLists.txt  dive.cpp  dive.h  main.cpp
src/10_class_copy/: CMakeLists.txt  clock.cpp  clock.h  main.cpp
test/: CMakeLists.txt
test/01_expressions_test/: CMakeLists.txt  expressions_test.cpp
test/02_decisions_if_test/: CMakeLists.txt  decisions_if_test.cpp
test/03_decisions_switch_test/: CMakeLists.txt  decisions_switch_test.cpp
test/04_loops_simple_data_test/: CMakeLists.txt  loops_simple_data_test.cpp
test/05_loops_strings_test/: CMakeLists.txt  loops_strings_test.cpp
test/06_loops_vectors_test/: CMakeLists.txt  loops_vectors_test.cpp
test/07_function_value_params_test/: CMakeLists.txt  function_value_params_test.cpp
test/08_function_ref_params_test/: CMakeLists.txt  (+1 more)
(+4 files in other folders)
