add_subdirectory(01_expressions)
add_subdirectory(02_decisions_if)
add_subdirectory(03_decisions_switch)
add_subdirectory(04_loops_simple_data)
add_subdirectory(05_loops_strings)
add_subdirectory(06_loops_vectors)
add_subdirectory(07_function_value_params)
add_subdirectory(08_function_ref_params)
add_subdirectory(09_class_basics)
add_subdirectory(10_class_copy)