add_subdirectory(01_expressions_test)
add_subdirectory(02_decisions_if_test)
add_subdirectory(03_decisions_switch_test)
add_subdirectory(04_loops_simple_data_test)
add_subdirectory(05_loops_strings_test)
add_subdirectory(06_loops_vectors_test)
add_subdirectory(07_function_value_params_test)
add_subdirectory(08_function_ref_params_test)
add_subdirectory(09_class_basics_test)
add_subdirectory(10_class_copy_test)